alignment issue fixed

--- a/findly-builder/src/app/components/search-insights/search-insights.component.scss
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.scss
@@ -253,7 +253,7 @@
 ::ng-deep .modal_popups_{
     &.view-query-modal{
         .modal-header{
-            padding: 15px 30px;
+            padding: 25px 30px 15px 30px;
             position: relative;
             height: auto !important;
             box-shadow: none;
